--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,5 +1,5 @@
 <h1>This is Users Component</h1>
-<button>Add User</button>
+<button (click)="addUser()">Add User</button>
 <table>
     <tr>
         <td>User Id</td>
