--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="height: 50px;">
   <ul>
     <li>
-      <a routerLink="/">Home</a>
+      <a routerLink="/home">Home</a>
     </li>
     <li>
       <a routerLink="/products">Products</a>
@@ -14,6 +14,8 @@
     </li>
   </ul>
 </div>
+<!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
+<!-- <app-home [dataFromParent]="parentVar"></app-home> -->
 <div>
   <router-outlet></router-outlet>
 </div>
