--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   </ul>
 </div>
 <!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
-<!-- <app-home [dataFromParent]="parentVar"></app-home> -->
+<app-home [dataFromParent]="parentVar"></app-home>
 <div>
   <router-outlet></router-outlet>
 </div>
