--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <!-- <h1>This is Home Component</h1> -->
-
+<p>Home START</p>
 <div>
     <h2>{{dataFromParent}}</h2>
     <!-- <p *ngFor="let td of todoData">{{td.id}}. {{td.title}}</p> -->
 </div>
+<p>Home END</p>
