Reactive form implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,13 @@
     <li>
       <a routerLink="/users">Users</a>
     </li>
+    <li>
+      <a routerLink="/form">Forms</a>
+    </li>
   </ul>
 </div>
 <!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
-<app-home [dataFromParent]="parentVar"></app-home>
+<!-- <app-home [dataFromParent]="parentVar"></app-home> -->
 <div>
   <router-outlet></router-outlet>
 </div>
