Angular animation implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
     <li>
       <a routerLink="/form">Forms</a>
     </li>
+    <li>
+      <a routerLink="/animation">Animation</a>
+    </li>
   </ul>
 </div>
 <!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
