Angular nested routing implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
     <li>
       <a routerLink="/animation">Animation</a>
     </li>
+    <li>
+      <a routerLink="/admin">Admin</a>
+    </li>
   </ul>
 </div>
 <!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
