third party library implementattion

--- a/src/app/components/finance/finance.component.html
+++ b/src/app/components/finance/finance.component.html
@@ -1,1 +1,1 @@
-<p>finance works!</p>
+<round-progress [current]="71" [max]="100" [color]="'red'" [background]="'grey'" [stroke]="50" [duration]="5000"></round-progress>
