revision of angular topics

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,4 +4,9 @@
     <h2>{{dataFromParent}}</h2>
     <!-- <p *ngFor="let td of todoData">{{td.id}}. {{td.title}}</p> -->
 </div>
+
+<img src="{{imageURL}}" alt="Dummy Image">
+
+<img src="../../../assets/sample.webp" alt="">
+
 <p>Home END</p>
