--- a/src/app/components/sample-form/sample-form.component.html
+++ b/src/app/components/sample-form/sample-form.component.html
@@ -29,7 +29,7 @@
         <input type="text" name="myAddress" id="myAddress" [(ngModel)]="user.address" #address="ngModel">
     </div>
     
-    <button type="submit">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 
 </form>
 
