--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,12 @@
     <li>
       <a routerLink="/admin">Admin</a>
     </li>
+    <li>
+      <a routerLink="/customer">Customer</a>
+    </li>
+    <li>
+      <a routerLink="/about">About</a>
+    </li>
   </ul>
 </div>
 <!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
