bootstrap grid system implementation

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,1 +1,64 @@
-<p>about works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+    <div class="col" style="border: 1px solid;">
+      Column
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-4" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-4" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-4" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-3" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-3" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-3" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-3" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-6" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+    <div class="col-6" style="border: 1px solid;">
+      <h1>Column</h1>
+    </div>
+  </div>
+</div>
