--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,5 @@
-<div style="height: 50px;">
-  <ul>
-    <li>
-      <a routerLink="/home">Home</a>
-    </li>
-    <li>
-      <a routerLink="/products">Products</a>
-    </li>
-    <li>
-      <a routerLink="/orders">Orders</a>
-    </li>
-    <li>
-      <a routerLink="/users">Users</a>
-    </li>
-    <li>
-      <a routerLink="/form">Forms</a>
-    </li>
-    <li>
-      <a routerLink="/animation">Animation</a>
-    </li>
-    <li>
-      <a routerLink="/admin">Admin</a>
-    </li>
-    <li>
-      <a routerLink="/customer">Customer</a>
-    </li>
-    <li>
-      <a routerLink="/about">About</a>
-    </li>
-  </ul>
-</div>
-<!-- <button (click)="parentVar = 'EDITED QWERTY'">Change</button> -->
-<!-- <app-home [dataFromParent]="parentVar"></app-home> -->
+<app-header></app-header>
 <div>
   <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
